--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -26,6 +26,17 @@
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class:"mx-1 mx-md-4") do |f| %>
                     <%= render "devise/shared/error_messages", resource: resource %>
+
+                    <%# Profile image field %>
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                         <%= f.label :image, class: "form-label" %><br />
+                        <%= f.file_field :image,  required: true  ,class:"form-control",accept: 'image/png,image/gif,image/jpeg'%>
+                      </div>
+                    </div>
+
+
                     <%# FirstName fied %>
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
