--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,12 @@
                         <div class="card">
                            <div class="card-body">
                               <div class="d-flex flex-column align-items-center text-center">
-                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                                 <%# <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150"> %>
+                                 <div id="new_profile" class="f-flex flex-row text-center mb-4">
+                                    <% if @user.image.attached? %>
+                                       <%= image_tag(@user.image, size:200, class:"rounded-circle")%>
+                                    <%end%>
+                                 </div>
                                  <div class="mt-3">
                                     <h4><%= (@user.first_name+ " " + @user.last_name).capitalize() %></h4>
                                     <p class="text-muted font-size-sm"><%= (@user.email)%></p>
