--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,110 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-   </head>
-   <body>
-      <main id="main">
-         <!-- ======= About Us Section ======= -->
-         <section id="about" class="about">
-            <div class="container">
-               <div class="section-title">
-                  <h2>My Profile</h2>
-               </div>
-               <div class="main-body">
-                  <div class="row gutters-sm">
-                     <div class="col-md-4 mb-3">
-                        <div class="card">
-                           <div class="card-body">
-                              <div class="d-flex flex-column align-items-center text-center">
-                                 <%# <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150"> %>
-                                 <div id="new_profile" class="f-flex flex-row text-center mb-4">
-                                    <% if @user.image.attached? %>
-                                       <%= image_tag(@user.image, size:200, class:"rounded-circle")%>
-                                    <%end%>
-                                 </div>
-                                 <div class="mt-3">
-                                    <h4><%= (@user.first_name+ " " + @user.last_name).capitalize() %></h4>
-                                    <p class="text-muted font-size-sm"><%= (@user.email)%></p>
-                                    <% if @user.id != current_user.id %>
-                                      <button class="btn btn-primary">Follow</button>
-                                    <%end%>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="card mt-3">
-                           <ul class="list-group list-group-flush">
-                             
-                              <li class="list-group-item d-flex justify-content-center align-items-center flex-wrap">
-                                 <h6 class="mb-0 ">
-                                    <strong class="text-secondary"><%= (@user.first_name+ " " + @user.last_name).capitalize() %>'s Friends</strong>
-                                 </h6>
-                              </li>
-
-                           </ul>
-                        </div>
-                     </div>
-                     <div class="col-md-8">
-                        <div class="card mb-3">
-                           <div class="card-body">
-                              <div class="row">
-                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Full Name</h6>
-                                 </div>
-                                 <div class="col-sm-9 text-secondary">
-                                    <%= (@user.first_name+ " " + @user.last_name).capitalize() %>
-                                 </div>
-                              </div>
-                              <hr>
-                              <div class="row">
-                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Email</h6>
-                                 </div>
-                                 <div class="col-sm-9 text-secondary">
-                                    <%= (@user.email)%>
-                                 </div>
-                              </div>
-                              <hr>
-                              <div class="row">
-                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Age</h6>
-                                 </div>
-                                 <div class="col-sm-9 text-secondary">
-                                    <%= @user.age %> years
-                                 </div>
-                              </div>
-                              <hr>
-                              <div class="row">
-                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">User Name</h6>
-                                 </div>
-                                 <div class="col-sm-9 text-secondary">
-                                    <%= @user.username.capitalize() %>
-                                 </div>
-                              </div>
-                              <hr>
-                             <% if @user.id === current_user.id %>
-                                <div class="row">
-                                  <div class="col-sm-12">
-                                      <%= link_to "Edit Profile",edit_user_registration_path(@user),class: "btn btn-warning"%>
-                                      <%= link_to "Delete Profile", registration_path(@user), data: { confirm: "Are you sure you want to delete this profile?" }, method: :delete, class:"btn btn-danger" %></li>
-
-                                  </div>
-                                </div>
-                              <% end %>
-                           </div>
-                        </div>
-                     </div>
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  </head>
+  <body>
+    <main id="main">
+      <!-- ======= About Us Section ======= -->
+      <section id="about" class="about">
+        <div class="container">
+          <div class="section-title">
+            <h2>My Profile</h2>
+          </div>
+          <div class="main-body">
+            <div class="row gutters-sm">
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="d-flex flex-column align-items-center text-center">
+                      <div id="new_profile" class="f-flex flex-row text-center mb-4">
+                        <% if @user.image.attached? %>
+                          <%= image_tag(@user.image, size:200, class:"rounded-circle")%>
+                        <%end%>
+                      </div>
+                      <div class="mt-3">
+                        <h4><%= (@user.first_name+ " " + @user.last_name).capitalize() %></h4>
+                        <p class="text-muted font-size-sm"><%= (@user.email)%></p>
+                        <% if @user.id != current_user.id %>
+                          <button class="btn btn-primary">Follow</button>
+                        <%end%>
+                      </div>
+                    </div>
                   </div>
-               </div>
+                </div>
+                <div class="card mt-3">
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-center align-items-center flex-wrap">
+                      <h6 class="mb-0 ">
+                        <strong class="text-secondary"><%= (@user.first_name+ " " + @user.last_name).capitalize() %>'s Friends</strong>
+                      </h6>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="card mb-3">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Full Name</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        <%= (@user.first_name+ " " + @user.last_name).capitalize() %>
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Email</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        <%= (@user.email)%>
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">Age</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        <%= @user.age %> years
+                      </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <h6 class="mb-0">User Name</h6>
+                      </div>
+                      <div class="col-sm-9 text-secondary">
+                        <%= @user.username.capitalize() %>
+                      </div>
+                    </div>
+                    <hr>
+                    <% if @user.id === current_user.id %>
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <%= link_to "Edit Profile",edit_user_registration_path(@user),class: "btn btn-warning"%>
+                          <%= link_to "Delete Profile", registration_path(@user), data: { confirm: "Are you sure you want to delete this profile?" }, method: :delete, class:"btn btn-danger" %></li>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+              <div class="row-sm-6 mb-3" >
+                <div class="card" style="width-100%, height: 100%">
+                  <div class="card-body text-center">
+                    <h4 class="f-flex align-items-center mb-3"><i class="material-icons text-muted mr-2"><%= (@user.first_name+ " " + @user.last_name).capitalize() %> 's Tweets</i></h4>
+                      <%= link_to "Create a new Tweet",new_tweet_path, class: "btn btn-success text-right m-2"%>
+                    <hr/>
+                    <% if @user.tweets.length > 0 %>
+                      <% @user.tweets.each do |tweet|%>
+                        <div class="card text-center m-5">
+                          <div class="card-header">
+                            <%= tweet.title.to_s.humanize %>
+                          </div>
+                          <div class="card-body">
+                            <h5 class="card-title"> <%= tweet.description.to_s.humanize%></h5>
+                            <% if tweet.user_id === current_user.id %>
+                              <div class="row m-2">
+                                <div class="col-sm-12">
+                                  <%= link_to "Edit Tweet",edit_tweet_path(tweet),class: "btn btn-warning"%>
+                                  <%= link_to "Delete Tweet", tweet_path(tweet), data: { confirm: "Are you sure you want to delete this Tweet?" }, method: :delete, class:"btn btn-danger" %></li>
+                                 </div>
+                              </div>
+                            <%end%>
+                        </div>
+                        <div class="card-footer text-muted">
+                          Tweeted on <%= l tweet.created_at.to_date, format: :long %>
+                        </div>
+                      </div>
+                    <%end%>
+                  <%end%>
+                </div>
+              </div>
             </div>
-            <div>
-         </section>
-         <!-- End About Us Section -->
-      </main>
-      <!-- End #main -->
-   </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+  </section>
+  <!-- End About Us Section -->
+</main>
+<!-- End #main -->
+</body>
 </html>
