Completed the Followers functionality with joins.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -26,7 +26,7 @@
               <%= link_to "Get Started", new_user_registration_path,class: "btn-get-started scrollto"%>
             </div>
           </div>
-          <div class="col-lg-6 order-1 order-lg-2 hero-img">
+          <div class="col-lg-6 order-1 order-lg-2 hero-img f-flex text-center">
            <img src="https://img.icons8.com/cute-clipart/512/000000/twitter.png"/>
           </div>
         </div>
