--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,7 @@
         <div class="container">
           <div class="section-title">
             <h2>My Tweets</h2>
-            <%= link_to "Create a new Tweet",new_tweet_path, class: "btn btn-success text-center m-5"%>
+            <%= link_to "Create a new Tweet",new_tweet_path, class: "btn btn-primary text-center m-5"%>
           </div>
           <div class="main-body">
             <div class="list-group">
