--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -117,7 +117,7 @@
                     <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
                   </div>
                   <%- if controller_name != 'sessions' %>
-                    <%= link_to "Log in", new_session_path(resource_name), class:"btn btn-primary btn-lg btn-block d-flex justify-content-center ", style:"background-color: #3b5998" %><br />
+                    <%= link_to "Log in", new_session_path(resource_name), class:"btn btn-primary btn-lg  d-flex justify-content-center  ", style:"background-color: #3b5998; text-color:white" %><br />
                   <% end %>
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
