--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <section id="about" class="about">
         <div class="container">
           <div class="section-title">
-            <h2>My Profile</h2>
+            <h2><%= (@user.first_name+ " " + @user.last_name).to_s.humanize %> 's Profile</h2>
           </div>
           <div class="main-body">
             <div class="row gutters-sm">
@@ -26,9 +26,13 @@
                       <div class="mt-3">
                         <h4><%= (@user.first_name+ " " + @user.last_name).capitalize() %></h4>
                         <p class="text-muted font-size-sm"><%= (@user.email)%></p>
-                        <% if @user.id != current_user.id %>
-                          <button class="btn btn-primary">Follow</button>
-                        <%end%>
+                        <% if @user.id != current_user.id%>
+                          <% if current_user.followees.include?(@user) %>
+                            <h5><%= button_to "Unfollow", unfollow_user_path, method: "POST", class: "btn btn-primary"%></h5>
+                          <% else %>
+                            <h5><%= button_to "Follow", follow_user_path, method: "POST",class: "btn btn-primary"%></h5>
+                          <% end%>
+                        <% end%>
                       </div>
                     </div>
                   </div>
@@ -37,8 +41,45 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-center align-items-center flex-wrap">
                       <h6 class="mb-0 ">
-                        <strong class="text-secondary"><%= (@user.first_name+ " " + @user.last_name).capitalize() %>'s Friends</strong>
+                        <strong class="text-secondary"><%= (@user.first_name+ " " + @user.last_name).capitalize() %>'s Followers</strong>
                       </h6>
+                      <div class="list-group">
+                        <% @user.followers.each do |user|%>
+                          <a href="<%= user_path(user) %>" class="list-group-item list-group-item-action flex-column align-items-start m-2 w-100" style="border: 2px solid">
+                            <div class="d-flex text-center w-100">
+                              <div id="new_profile" class="f-flex flex-row text-center">
+                                <% if user.image.attached? %>
+                                  <%= image_tag(user.image, size:50, class:"rounded-circle")%>
+                                <%end%>
+                              </div>
+                              <h5 class="mt-3 w-100">  <%= (user.first_name+ " " + user.last_name).to_s.humanize %></h5>
+                            </div>
+                          </a>
+                        <%end%>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="card mt-3">
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex justify-content-center align-items-center flex-wrap">
+                      <h6 class="mb-0 ">
+                        <strong class="text-secondary"><%= (@user.first_name+ " " + @user.last_name).capitalize() %>'s Following</strong>
+                      </h6>
+                      <div class="list-group">
+                        <% @user.followees.each do |user|%>
+                          <a href="<%= user_path(user) %>" class="list-group-item list-group-item-action flex-column align-items-start m-2 w-100" style="border: 2px solid">
+                            <div class="d-flex text-center w-100">
+                              <div id="new_profile" class="f-flex flex-row text-center">
+                                <% if user.image.attached? %>
+                                  <%= image_tag(user.image, size:50, class:"rounded-circle")%>
+                                <%end%>
+                              </div>
+                              <h5 class="mt-3 w-100">  <%= (user.first_name+ " " + user.last_name).to_s.humanize %></h5>
+                            </div>
+                          </a>
+                        <%end%>
+                      </div>
                     </li>
                   </ul>
                 </div>
@@ -92,47 +133,48 @@
                   <% end %>
                 </div>
               </div>
-              <div class="row-sm-6 mb-3" >
-                <div class="card" style="width-100%, height: 100%">
-                  <div class="card-body text-center">
-                    <h4 class="f-flex align-items-center mb-3"><i class="material-icons text-muted mr-2"><%= (@user.first_name+ " " + @user.last_name).capitalize() %> 's Tweets</i></h4>
-                      <%= link_to "Create a new Tweet",new_tweet_path, class: "btn btn-success text-right m-2"%>
-                    <hr/>
-                    <% if @user.tweets.length > 0 %>
-                      <% @user.tweets.each do |tweet|%>
-                        <div class="card text-center m-5">
-                          <div class="card-header">
-                            <%= tweet.title.to_s.humanize %>
+              <% if (@user.id === current_user.id)  || (@user.followees.find_by(id: current_user.id) != nil) %>
+                <div class="row-sm-6 mb-3" >
+                  <div class="card" style="width-100%, height: 100%">
+                    <div class="card-body text-center">
+                      <h4 class="f-flex align-items-center mb-3"><i class="material-icons text-muted mr-2"><%= (@user.first_name+ " " + @user.last_name).capitalize() %> 's Tweets</i></h4>
+                      <hr/>
+                      <% if @user.tweets.length > 0 %>
+                        <% @user.tweets.each do |tweet|%>
+                          <div class="card text-center m-5">
+                            <div class="card-header">
+                              <%= tweet.title.to_s.humanize %>
+                            </div>
+                            <div class="card-body">
+                              <h5 class="card-title"> <%= tweet.description.to_s.humanize%></h5>
+                              <% if tweet.user_id === current_user.id %>
+                                <div class="row m-2">
+                                  <div class="col-sm-12">
+                                    <%= link_to "Edit Tweet",edit_tweet_path(tweet),class: "btn btn-warning"%>
+                                    <%= link_to "Delete Tweet", tweet_path(tweet), data: { confirm: "Are you sure you want to delete this Tweet?" }, method: :delete, class:"btn btn-danger" %></li>
+                                  </div>
+                                </div>
+                              <%end%>
+                            </div>
+                            <div class="card-footer text-muted">
+                              Tweeted on <%= l tweet.created_at.to_date, format: :long %>
+                            </div>
                           </div>
-                          <div class="card-body">
-                            <h5 class="card-title"> <%= tweet.description.to_s.humanize%></h5>
-                            <% if tweet.user_id === current_user.id %>
-                              <div class="row m-2">
-                                <div class="col-sm-12">
-                                  <%= link_to "Edit Tweet",edit_tweet_path(tweet),class: "btn btn-warning"%>
-                                  <%= link_to "Delete Tweet", tweet_path(tweet), data: { confirm: "Are you sure you want to delete this Tweet?" }, method: :delete, class:"btn btn-danger" %></li>
-                                 </div>
-                              </div>
-                            <%end%>
-                        </div>
-                        <div class="card-footer text-muted">
-                          Tweeted on <%= l tweet.created_at.to_date, format: :long %>
-                        </div>
-                      </div>
-                    <%end%>
-                  <%end%>
+                        <%end%>
+                      <%end%>
+                    </div>
+                  </div>
                 </div>
-              </div>
+              <%end%>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div>
-  </section>
-  <!-- End About Us Section -->
-</main>
-<!-- End #main -->
+    <div>
+    </section>
+    <!-- End About Us Section -->
+  </main>
+  <!-- End #main -->
 </body>
 </html>
