Added account help desk to access views of devise user account

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -18,7 +18,19 @@ a:hover {
 
 }
 
+.btn, 
+.btn:hover, 
+.btn:active, 
+.btn:focus, 
+.btn:visited,
+.btn:default{
+  color: #FFF;
+}
 
+.list-group-item{
+  border: 2px solid black !important ;
+  
+}
 
 h1,
 h2,
